--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -338,24 +338,6 @@ eprint = {https://doi.org/10.1287/opre.12.5.655},
   howpublished = {\url{https://github.com/surakuma/communication-scheuling}},
 }
 
-@article{NPComplete3Machine,
- author = {R\"{o}ck, Hans},
- title = {The Three-Machine No-Wait Flow Shop is NP-Complete},
- journal = {J. ACM},
- issue_date = {April 1984},
- volume = {31},
- number = {2},
- month = mar,
- year = {1984},
- issn = {0004-5411},
- pages = {336--345},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/62.65},
- doi = {10.1145/62.65},
- acmid = {65},
- publisher = {ACM},
- address = {New York, NY, USA},
-} 
 @misc{Cascade,
     year  =        2019,
     title =        "Computing: Cascade",
@@ -390,3 +372,24 @@ issn = "0010-4655",
 doi = "https://doi.org/10.1016/j.cpc.2010.04.018",
 url = "http://www.sciencedirect.com/science/article/pii/S0010465510001438",
 }
+
+
+@article{3machineFlowShopNPComplete,
+ author = {Garey, M. R. and Johnson, D. S. and Sethi, Ravi},
+ title = {The Complexity of Flowshop and Jobshop Scheduling},
+ journal = {Math. Oper. Res.},
+ issue_date = {May 1976},
+ volume = {1},
+ number = {2},
+ month = may,
+ year = {1976},
+ issn = {0364-765X},
+ pages = {117--129},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1287/moor.1.2.117},
+ doi = {10.1287/moor.1.2.117},
+ acmid = {2782830},
+ publisher = {INFORMS},
+ address = {Institute for Operations Research and the Management Sciences (INFORMS), Linthicum, Maryland, USA},
+ keywords = {NP-complete, computational complexity, jobshop scheduling},
+} 
